--- a/2018-QR-A-SavingUniverseAgain/build.gradle
+++ b/2018-QR-A-SavingUniverseAgain/build.gradle
@@ -18,5 +18,7 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '5.+'
+    // testCompile group: 'org.junit.jupiter', name: 'junit-jupiter.api', version: '5.1.0'
+    testCompile group: 'junit', name: 'junit', version: '4.11'
+
 }
