--- a/2018-QR-A-SavingUniverseAgain/build.gradle
+++ b/2018-QR-A-SavingUniverseAgain/build.gradle
@@ -18,7 +18,17 @@ repositories {
 }
 
 dependencies {
-    // testCompile group: 'org.junit.jupiter', name: 'junit-jupiter.api', version: '5.1.0'
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+  testCompile("org.junit.jupiter:junit-jupiter-api:5.1.1")
+  testRuntime("org.junit.jupiter:junit-jupiter-engine:5.1.1")
+  testCompile("org.hamcrest:hamcrest-all:1.3")
+    // testCompile group: 'junit', name: 'junit', version: '4.12'
+}
 
+buildscript {
+  repositories {
+    mavenCentral()
+  }
+  dependencies {
+    classpath 'org.junit.platform:junit-platform-gradle-plugin:1.1.1'
+  }
 }
