--- a/2019-QR-A-ForgoneSolution/pom.xml
+++ b/2019-QR-A-ForgoneSolution/pom.xml
@@ -8,6 +8,11 @@
     <artifactId>forgone-solution</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
+    <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
