--- a/2016-QR-C-CoinJam/pom.xml
+++ b/2016-QR-C-CoinJam/pom.xml
@@ -10,9 +10,12 @@
     <description>Code Jam 2016 QR Problem C</description>
 
     <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+
         <main.class>com.codejam.qr2016.CoinJam</main.class>
-        <junit.version>4.12</junit.version>
-        <hamcrest.version></hamcrest.version>
+        <junit.version>4.13.1</junit.version>
+        <hamcrest.version>1.3</hamcrest.version>
     </properties>
 
     <build>
@@ -42,7 +45,7 @@
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-core</artifactId>
-            <version>1.3</version>
+            <version>${hamcrest.version}</version>
         </dependency>
     </dependencies>
 
